fix: mantine ref not showing

--- a/frontend/src/app.module.css
+++ b/frontend/src/app.module.css
@@ -34,8 +34,9 @@
     display: grid;
     place-items: center;
     position: fixed;
-    bottom: 1rem;
+    bottom: 2rem;
     left: 1rem;
+    z-index: 3;
 }
 
 .mouse {
